--- a/auditflow/src/main/resources/application.properties
+++ b/auditflow/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=auditflow
-# Configuration de la base de données MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/auditflowdb
+
+# Configuration de la base de donnÃ©es MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/auditflowdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -9,8 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# (optionnel) Logging SQL formaté
+# (optionnel) Logging SQL formatÃ©
 spring.jpa.properties.hibernate.format_sql=true
-
-# (optionnel) Définir un secret JWT (préparation sécurité)
-app.jwt.secret=SecretKeyAuditFlow
+# (optionnel) DÃ©finir un secret JWT (prÃ©paration sÃ©curitÃ©)
+app.jwt.secret=auditflow-secret-key-must-be-32-characters
