--- a/auditflow/src/main/resources/application.properties
+++ b/auditflow/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 # (optionnel) Définir un secret JWT (préparation sécurité)
 app.jwt.secret=auditflow-secret-key-must-be-32-characters
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
