--- a/auditflow/src/main/resources/application.properties
+++ b/auditflow/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.jpa.properties.hibernate.format_sql=true
 app.jwt.secret=auditflow-secret-key-must-be-32-characters
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.websocket.servlet.allowed-origins=*
